--- a/NEAControllerFormsApplication/NEAControllerFormsApplication/Form8.resx
+++ b/NEAControllerFormsApplication/NEAControllerFormsApplication/Form8.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="LCSImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LCSImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="label5.Text" xml:space="preserve">
+    <value>The Controller, using the Control Interface, can work with the launching operator (Winch, Aerotow etc.) to record the flight details of the
+aircraft, such that information including takeoff time, landing time, the launch type and more can be recorded with minimal error, providing
+a quick, easy and safe environment to operate aircraft in.
+The Control Interface offers a status section to minimise misinformation between various parts of the airfield, showing status updates on
+launching operators, as well as being able to update its own operating information.</value>
   </data>
 </root>
